namespaces/live.cloud-platform.service.justice.gov.uk/send-legal-mail-to-prisons-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: send-legal-mail-to-prisons-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ask-visit-someone-in-prison"
    cloud-platform.justice.gov.uk/slack-alert-channel: "send-legal-mail-alerts"
    cloud-platform.justice.gov.uk/application: "Send legal mail to prisons"
    cloud-platform.justice.gov.uk/owner: "Prisoner Communications: prisonvisitsbooking@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/send-legal-mail-to-prisons-api.git,https://github.com/ministryofjustice/send-legal-mail-to-prisons.git,https://github.com/ministryofjustice/hmpps-send-legal-mail-staff-ui.git"
    cloud-platform.justice.gov.uk/team-name: "book-a-prison-visit"
